fixed an issue witht the select box being too small for the form

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,3 +29,6 @@ tr td a {
 table {
 	max-width: 99.2%;
 }
+.dataTables_length select {
+	width: 40%;
+} 
